05-Metal&Traefik/04-Merhaba-Dunya/04-Merhaba-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merhaba-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: merhaba.techakademi.com
    http:
      paths:
      - backend:
          service:
            name: merhaba-servisi
            port:
              number: 80
        path: /
        pathType: Prefix
